Added captions, fixed footer links, redesigned footer

--- a/P2/index.html
+++ b/P2/index.html
@@ -40,21 +40,21 @@
                         the environmental footprint of any project.</h2>
                     <a class="button-nav" href="./pages/contact.html">Contact us &nbsp &nbsp ➞</a>
                 </div>
-                <img src="./img/perspective.jpg" alt="">
+                <img src="./img/perspective.jpg" alt="two people working together">
             </div>
         </div>
     </div>
 
 
     <div class="brands">
-        <img src="./img/p1.jpg" alt="">
-        <img src="./img/p2.jpg" alt="">
-        <img src="./img/p3.jpg" alt="">
-        <img src="./img/p4.jpg" alt="">
-        <img src="./img/p5.jpg" alt="">
-        <img src="./img/p6.jpg" alt="">
-        <img src="./img/p7.jpg" alt="">
-        <img src="./img/p8.jpg" alt="">
+        <img src="./img/p1.jpg" alt="seerem logo">
+        <img src="./img/p2.jpg" alt="new engineer logo">
+        <img src="./img/p3.jpg" alt="redi logo">
+        <img src="./img/p4.jpg" alt="improve sustainability logo">
+        <img src="./img/p5.jpg" alt="improve projects logo">
+        <img src="./img/p6.jpg" alt="sand cell structures logo">
+        <img src="./img/p7.jpg" alt="epcm logo">
+        <img src="./img/p8.jpg" alt="data lombard logo">
     </div>
 
 
@@ -135,7 +135,8 @@
                     <p>Our experienced associates participate in projects to help deliver services to clients
                     </p>
                     <div class="card">
-                        <a href="./pages/struna.html"> <img src="./img/about.jpg" alt="" class="image-large">
+                        <a href="./pages/struna.html"> <img src="./img/about.jpg"
+                                alt="people looking at laptop monitors" class="image-large">
                             <h3>STRUNA: Engineering Dashboard</h3>
                             <h4>Stress/structural Navigator or Engineering Dashboard.
                             </h4>
@@ -199,7 +200,7 @@
                         </p>
                         <a href="./pages/hydraulic-ramp.html">Read more ></a>
                     </div>
-                    <img src="./img/article-1.jpg" alt="">
+                    <img src="./img/article-1.jpg" alt="people sitting at a cafe">
                 </div>
 
                 <div class="article-card">
@@ -209,7 +210,7 @@
                         </p>
                         <a href="./pages/time-to-step-up.html">Read more ></a>
                     </div>
-                    <img src="./img/article-2.jpg" alt="">
+                    <img src="./img/article-2.jpg" alt="a person working in a lab">
                 </div>
             </div>
 
@@ -237,10 +238,10 @@
                     <a class="button-nav" href="./pages/about.html">Meet our team ➞</a>
                 </div>
                 <div class="members">
-                    <img src="./img/max.jpg" alt="">
-                    <img src="./img/dioni.jpg" alt="">
-                    <img src="./img/dima.jpg" alt="">
-                    <img src="./img/masha.jpg" alt="">
+                    <img src="./img/max.jpg" alt="portrait of max">
+                    <img src="./img/dioni.jpg" alt="portrait of dioni">
+                    <img src="./img/dima.jpg" alt="portrait of dima">
+                    <img src="./img/masha.jpg" alt="portrait of masha">
                     <div>
                     </div>
                 </div>
@@ -251,21 +252,6 @@
 
 
 
-
-
-
-
-    <div class="footer-contact">
-        <div class="wrap-content contact-wrapper">
-            <div class="contact-text">Stay in touch and hear the latest from us</div>
-            <div>
-                <form class="contact-form">
-                    <input type="email" id="contact-email" name="email" placeholder="Enter your email">
-                    <input type="submit" value="Subscribe" id="contact-submit">
-                </form>
-            </div>
-        </div>
-    </div>
 
     <footer>
         <div class="wrap-footer">
@@ -283,7 +269,6 @@
                 <p>Company</p>
                 <a href="./pages/portfolio.html">Portfolio</a>
                 <a href="./pages/contact.html">Careers</a>
-                <a href="#">Privacy</a>
             </div>
 
             <div class="footer-list">
@@ -291,6 +276,10 @@
                 <a href="mailto:example@gmail.com">example@email.com</a>
                 <a href="tel:+14039669848">+1 (403) 966 9848</a>
                 <a href="#">Suite 2000 125 9 Avenue SE, Calgary, AB, T2G OP6</a>
+            </div>
+            <div class="contact-list">
+                <h3>Stay in touch and hear the latest from us</h3>
+                <a href="./pages/contact.html" class="button-nav">Sign Up</a>
             </div>
         </div>
     </footer>
