--- a/P2/pages/projects.html
+++ b/P2/pages/projects.html
@@ -81,7 +81,7 @@
             <div class="projects">
                 <div class="project-card">
                     <a href="../pages/struna.html">
-                        <img src="../img/about.jpg" alt="">
+                        <img src="../img/about.jpg" alt="two people looking at monitors">
                         <div>
                             <h3>STRUNA: Engineering Dashboard</h3>
                             <p>Stress/structural Navigator or Engineering Dashboard.</p>
@@ -91,7 +91,7 @@
 
                 <div class="project-card">
                     <a href="../pages/reengineering-canada.html">
-                        <img src="../img/project-1.jpg" alt="">
+                        <img src="../img/project-1.jpg" alt="a port at sea">
                         <div>
                             <h3>Re-engineering Canada</h3>
                             <p>Building a Nation 150 years after three British Fiefdoms in North America United.</p>
@@ -104,7 +104,7 @@
             <div class="projects">
                 <div class="project-card">
                     <a href="#">
-                        <img src="../img/landing-2.jpeg" alt="">
+                        <img src="../img/landing-2.jpeg" alt="a bird's eye view of a worksite">
                         <div>
                             <h3>Economic Water & Electricity</h3>
                             <p>Providing water and electricity to rural residents.</p>
@@ -114,7 +114,7 @@
 
                 <div class="project-card">
                     <a href="#">
-                        <img src="../img/project-3.jpg" alt="">
+                        <img src="../img/project-3.jpg" alt="structure of a building">
                         <div>
                             <h3>Structural Steel Optimization</h3>
                             <p>Using universal structural materials for modules to save steel, cut cost, and reduce
@@ -159,22 +159,12 @@
         </div>
 
 
-
-
-
     </main>
 
-    <div class="footer-contact">
-        <div class="wrap-content contact-wrapper">
-            <div class="contact-text">Stay in touch and hear the latest from us</div>
-            <div>
-                <form class="contact-form">
-                    <input type="email" id="contact-email" name="email" placeholder="Enter your email">
-                    <input type="submit" value="Subscribe" id="contact-submit">
-                </form>
-            </div>
-        </div>
-    </div>
+    
+
+
+
 
     <footer>
         <div class="wrap-footer">
@@ -183,18 +173,15 @@
             </div>
             <div class="footer-list">
                 <p>Info</p>
-                <a href="#">Projects</a>
-                <a href="#">Services</a>
-                <a href="#">Stories</a>
-                <a href="#">About</a>
+                <a href="../pages/projects.html">Projects</a>
+                <a href="../pages/stories.html">Stories</a>
+                <a href="../pages/about.html">About</a>
             </div>
 
             <div class="footer-list">
                 <p>Company</p>
-                <a href="#">Portfolio</a>
-                <a href="#">Community</a>
-                <a href="#">Careers</a>
-                <a href="#">Privacy</a>
+                <a href="../pages/portfolio.html">Portfolio</a>
+                <a href="../pages/contact.html">Careers</a>
             </div>
 
             <div class="footer-list">
@@ -203,8 +190,13 @@
                 <a href="tel:+14039669848">+1 (403) 966 9848</a>
                 <a href="#">Suite 2000 125 9 Avenue SE, Calgary, AB, T2G OP6</a>
             </div>
+            <div class="contact-list">
+                <h3>Stay in touch and hear the latest from us</h3>
+                <a href="../pages/contact.html" class="button-nav">Sign Up</a>
+            </div>
         </div>
     </footer>
+
 
 
 </body>
