--- a/P2/pages/stories.html
+++ b/P2/pages/stories.html
@@ -50,7 +50,7 @@
                         </p>
                         <a href="../pages/hydraulic-ramp.html">Read more ></a>
                     </div>
-                    <img src="../img/article-1.jpg" alt="">
+                    <img src="../img/article-1.jpg" alt="four people sitting in a cafe">
                 </div>
 
                 <div class="article-card">
@@ -60,7 +60,7 @@
                         </p>
                         <a href="../pages/time-to-step-up.html">Read more ></a>
                     </div>
-                    <img src="../img/article-2.jpg" alt="">
+                    <img src="../img/article-2.jpg" alt="a person working in a lab">
                 </div>
 
                 <div class="article-card">
@@ -87,22 +87,11 @@
 
 
 
-
-
     </main>
 
-    <div class="footer-contact">
-        <div class="wrap-content contact-wrapper">
-            <div class="contact-text">Stay in touch and hear the latest from us</div>
-            <div>
-                <form class="contact-form">
-                    <input type="email" id="contact-email" name="email" placeholder="Enter your email">
-                    <input type="submit" value="Subscribe" id="contact-submit">
-                </form>
-            </div>
-        </div>
-    </div>
 
+    
+    
     <footer>
         <div class="wrap-footer">
             <div class="footer-list">
@@ -110,18 +99,15 @@
             </div>
             <div class="footer-list">
                 <p>Info</p>
-                <a href="#">Projects</a>
-                <a href="#">Services</a>
-                <a href="#">Stories</a>
-                <a href="#">About</a>
+                <a href="../pages/projects.html">Projects</a>
+                <a href="../pages/stories.html">Stories</a>
+                <a href="../pages/about.html">About</a>
             </div>
 
             <div class="footer-list">
                 <p>Company</p>
-                <a href="#">Portfolio</a>
-                <a href="#">Community</a>
-                <a href="#">Careers</a>
-                <a href="#">Privacy</a>
+                <a href="../pages/portfolio.html">Portfolio</a>
+                <a href="../pages/contact.html">Careers</a>
             </div>
 
             <div class="footer-list">
@@ -130,8 +116,13 @@
                 <a href="tel:+14039669848">+1 (403) 966 9848</a>
                 <a href="#">Suite 2000 125 9 Avenue SE, Calgary, AB, T2G OP6</a>
             </div>
+            <div class="contact-list">
+                <h3>Stay in touch and hear the latest from us</h3>
+                <a href="../pages/contact.html" class="button-nav">Sign Up</a>
+            </div>
         </div>
     </footer>
+
 
 
 </body>
