--- a/P2/pages/struna.html
+++ b/P2/pages/struna.html
@@ -74,7 +74,7 @@
                     </p>
                     <div>
 
-                        <img src="../img/struna.png" alt="" class="image-medium">
+                        <img src="../img/struna.png" alt="piping and structural models" class="image-medium">
                         <p class="caption">Figure 1. Piping and Structural 3D-CAD Models brought as references into
                             common
                             3D
@@ -110,7 +110,7 @@
                         </p>
                     </div>
                     <div>
-                        <img src="../img/struna-1.png" alt="">
+                        <img src="../img/struna-1.png" alt="structural analytical model of a piperack">
                         <p class="caption">Fig. 2 Structural Analytical Model (STAAD.Pro) of a 5-level Piperack with
                             platforms and galleries.
                         </p>
@@ -119,7 +119,7 @@
 
                 <div class="two-column font-medium">
                     <div>
-                        <img src="../img/struna-2.png" alt="">
+                        <img src="../img/struna-2.png" alt="a bat and a bird flying">
                         <p class="caption">Fig. 3 Analytical Model (AutoPipe) of a Piping-Stress System stretching for
                             hundreds of meters across the Plant.
                         </p>
@@ -170,7 +170,7 @@
                         </p>
                     </div>
                     <div>
-                        <img src="../img/struna-3.png" alt="">
+                        <img src="../img/struna-3.png" alt="analytical model of a piping-stress system">
                     </div>
                     <div>
                         <p>Similarly, for the last two decades the working environment, the efficacy and reliability of
@@ -233,23 +233,10 @@
             </div>
 
 
-
-
     </main>
 
 
 
-    <div class="footer-contact">
-        <div class="wrap-content contact-wrapper">
-            <div class="contact-text">Stay in touch and hear the latest from us</div>
-            <div>
-                <form class="contact-form">
-                    <input type="email" id="contact-email" name="email" placeholder="Enter your email">
-                    <input type="submit" value="Subscribe" id="contact-submit">
-                </form>
-            </div>
-        </div>
-    </div>
 
     <footer>
         <div class="wrap-footer">
@@ -258,18 +245,15 @@
             </div>
             <div class="footer-list">
                 <p>Info</p>
-                <a href="#">Projects</a>
-                <a href="#">Services</a>
-                <a href="#">Stories</a>
-                <a href="#">About</a>
+                <a href="../pages/projects.html">Projects</a>
+                <a href="../pages/stories.html">Stories</a>
+                <a href="../pages/about.html">About</a>
             </div>
 
             <div class="footer-list">
                 <p>Company</p>
-                <a href="#">Portfolio</a>
-                <a href="#">Community</a>
-                <a href="#">Careers</a>
-                <a href="#">Privacy</a>
+                <a href="../pages/portfolio.html">Portfolio</a>
+                <a href="../pages/contact.html">Careers</a>
             </div>
 
             <div class="footer-list">
@@ -277,6 +261,10 @@
                 <a href="mailto:example@gmail.com">example@email.com</a>
                 <a href="tel:+14039669848">+1 (403) 966 9848</a>
                 <a href="#">Suite 2000 125 9 Avenue SE, Calgary, AB, T2G OP6</a>
+            </div>
+            <div class="contact-list">
+                <h3>Stay in touch and hear the latest from us</h3>
+                <a href="../pages/contact.html" class="button-nav">Sign Up</a>
             </div>
         </div>
     </footer>
