--- a/P2/pages/about.html
+++ b/P2/pages/about.html
@@ -34,7 +34,7 @@
                 <h2>SEEDA is an enthusiastic, creative and diverse team offering engineering and project management
                     services to assist clients in the successful and sustainable execution of projects.
                 </h2>
-                <img src="../img/covers/about-cover.jpg" alt="">
+                <img src="../img/covers/about-cover.jpg" alt="four people looking at a board">
             </div>
         </div>
     </div>
@@ -183,19 +183,6 @@
     </main>
 
 
-
-    <div class="footer-contact">
-        <div class="wrap-content contact-wrapper">
-            <div class="contact-text">Stay in touch and hear the latest from us</div>
-            <div>
-                <form class="contact-form">
-                    <input type="email" id="contact-email" name="email" placeholder="Enter your email">
-                    <input type="submit" value="Subscribe" id="contact-submit">
-                </form>
-            </div>
-        </div>
-    </div>
-
     <footer>
         <div class="wrap-footer">
             <div class="footer-list">
@@ -203,18 +190,15 @@
             </div>
             <div class="footer-list">
                 <p>Info</p>
-                <a href="#">Projects</a>
-                <a href="#">Services</a>
-                <a href="#">Stories</a>
-                <a href="#">About</a>
+                <a href="../pages/projects.html">Projects</a>
+                <a href="../pages/stories.html">Stories</a>
+                <a href="../pages/about.html">About</a>
             </div>
 
             <div class="footer-list">
                 <p>Company</p>
-                <a href="#">Portfolio</a>
-                <a href="#">Community</a>
-                <a href="#">Careers</a>
-                <a href="#">Privacy</a>
+                <a href="../pages/portfolio.html">Portfolio</a>
+                <a href="../pages/contact.html">Careers</a>
             </div>
 
             <div class="footer-list">
@@ -222,6 +206,10 @@
                 <a href="mailto:example@gmail.com">example@email.com</a>
                 <a href="tel:+14039669848">+1 (403) 966 9848</a>
                 <a href="#">Suite 2000 125 9 Avenue SE, Calgary, AB, T2G OP6</a>
+            </div>
+            <div class="contact-list">
+                <h3>Stay in touch and hear the latest from us</h3>
+                <a href="../pages/contact.html" class="button-nav">Sign Up</a>
             </div>
         </div>
     </footer>
