--- a/P2/pages/reengineering-canada.html
+++ b/P2/pages/reengineering-canada.html
@@ -493,22 +493,10 @@
 
 
 
-
     </main>
 
 
 
-    <div class="footer-contact">
-        <div class="wrap-content contact-wrapper">
-            <div class="contact-text">Stay in touch and hear the latest from us</div>
-            <div>
-                <form class="contact-form">
-                    <input type="email" id="contact-email" name="email" placeholder="Enter your email">
-                    <input type="submit" value="Subscribe" id="contact-submit">
-                </form>
-            </div>
-        </div>
-    </div>
 
     <footer>
         <div class="wrap-footer">
@@ -517,18 +505,15 @@
             </div>
             <div class="footer-list">
                 <p>Info</p>
-                <a href="#">Projects</a>
-                <a href="#">Services</a>
-                <a href="#">Stories</a>
-                <a href="#">About</a>
+                <a href="../pages/projects.html">Projects</a>
+                <a href="../pages/stories.html">Stories</a>
+                <a href="../pages/about.html">About</a>
             </div>
 
             <div class="footer-list">
                 <p>Company</p>
-                <a href="#">Portfolio</a>
-                <a href="#">Community</a>
-                <a href="#">Careers</a>
-                <a href="#">Privacy</a>
+                <a href="../pages/portfolio.html">Portfolio</a>
+                <a href="../pages/contact.html">Careers</a>
             </div>
 
             <div class="footer-list">
@@ -537,8 +522,13 @@
                 <a href="tel:+14039669848">+1 (403) 966 9848</a>
                 <a href="#">Suite 2000 125 9 Avenue SE, Calgary, AB, T2G OP6</a>
             </div>
+            <div class="contact-list">
+                <h3>Stay in touch and hear the latest from us</h3>
+                <a href="../pages/contact.html" class="button-nav">Sign Up</a>
+            </div>
         </div>
     </footer>
+
 
 
 
