Fixed semantic errors

--- a/P2/index.html
+++ b/P2/index.html
@@ -38,7 +38,7 @@
                         will
                         reduce
                         the environmental footprint of any project.</h2>
-                    <a class="button-nav" href="./pages/contact.html">Contact us &nbsp &nbsp ➞</a>
+                    <a class="button-nav" href="./pages/contact.html">Contact us &nbsp;&nbsp; ➞</a>
                 </div>
                 <img src="./img/perspective.jpg" alt="two people working together">
             </div>
@@ -87,14 +87,14 @@
 
                 <div class="services-list">
                     <div class="service">
-                        <img src="./icons/monitor effectiveness.svg" alt="monitor icon">
+                        <img src="./icons/monitor-effectiveness.svg" alt="monitor icon">
                         <h3>Monitor effectiveness of workflows, processes and interfaces </h3>
                         <p>With rigorous monitoring, we will improve the effectiveness and efficiency of your workflows,
                             processes, and interface.</p>
                     </div>
 
                     <div class="service">
-                        <img src="./icons/project planning.svg" alt="planning icon">
+                        <img src="./icons/project-planning.svg" alt="planning icon">
                         <h3>Project planning, management and execution support across project lifecycle</h3>
                         <p>From the beginning, we will identify project objectives, developing solutions, and putting
                             your project plan into motion.</p>
@@ -115,7 +115,7 @@
                     </div>
 
                     <div class="service">
-                        <img src="./icons/project surveillance.svg" alt="project audit icon">
+                        <img src="./icons/project-surveillance.svg" alt="project audit icon">
                         <h3>Project surveillance and audit consultancy</h3>
                         <p>We will verify that your organization continues to remain certified and identify improvement
                             initiatives and their supporting
