--- a/P2/pages/cleantech-asia.html
+++ b/P2/pages/cleantech-asia.html
@@ -46,12 +46,15 @@
                             that will fuel your next opportunities wherever you live and work. It’s two days of insights
                             into sustainable innovation with the power to deliver a net zero future."
                         </p>
-                        <a href="https://www.google.com/url?q=https%3A%2F%2Fwww.cleantech.com%2Fevent%2Fcleantech-forum-asia%2F&sa=D&sntz=1&usg=AFQjCNHgZc4OY1ZcE3TjG-jsu4JzWq3PGg">Register here</a>
+                        <a
+                            href="https://www.google.com/url?q=https%3A%2F%2Fwww.cleantech.com%2Fevent%2Fcleantech-forum-asia%2F&sa=D&sntz=1&usg=AFQjCNHgZc4OY1ZcE3TjG-jsu4JzWq3PGg">Register
+                            here</a>
                     </div>
                 </div>
+                
             </div>
 
-
+        </div>
 
     </main>
 
