--- a/P2/pages/contact.html
+++ b/P2/pages/contact.html
@@ -43,7 +43,7 @@
 
         <section class="wrap-content">
 
-
+            <h2>Contact form</h2>
             <div class="two-column">
                 <div class="font-large">
                     <p>Please complete the form so we can provide quick and efficient service. </p>
@@ -64,7 +64,7 @@
                     </div>
 
                     <div class="input-group-3">
-                        <textarea rows="8" cols="50" name="comment" form="usrform"
+                        <textarea rows="8" cols="50" name="comment"
                             placeholder="Provide your request or comments"></textarea>
                         <input type="submit" value="Submit">
                     </div>
