--- a/P2/pages/hydraulic-ramp.html
+++ b/P2/pages/hydraulic-ramp.html
@@ -83,7 +83,7 @@
                         <img src="../img/hydraulic-body.jpg" alt="two people inspecting a device">
                         <p class="caption">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam voluptatum,
                             commodi neque vero mollitia expedita sapiente nesciunt, aliquam amet officiis laudantium
-                            tempora. Alias architecto quisquam a excepturi aspernatur hic natus!</caption>
+                            tempora. Alias architecto quisquam a excepturi aspernatur hic natus!</p>
 
                         <p>After consultation between the students and the mentors of SEEDA, a new plan and project
                             scope were sought out. The students were requested to design a Hydraulic Ram Pump Site
@@ -147,8 +147,10 @@
 
                     </div>
                 </div>
+
             </div>
 
+        </div>
 
 
     </main>
