--- a/P2/pages/reengineering-canada.html
+++ b/P2/pages/reengineering-canada.html
@@ -39,92 +39,108 @@
             <h3>Introduction</h3>
             <div>
                 <div class="two-column font-extra-large">
-                <p>
-                    This document is presented by two Canadian civil engineers; one in mid-career, and the other
-                    long-retired after more than 40 years practicing as a consulting engineer. Historically, engineers
-                    have a long history of planning, design, construction, and innovation on a wide variety of projects.
-                    Thousands of years ago in Egypt they built pyramids and invented new irrigation technology. In the
-                    Greco-Roman period of Mediterranean empires, they developed innovative infrastructure and built
-                    massive structures. Far to the east they constructed the Great Wall to defend China, as well as the
-                    Grand Canal to connect two major rivers. Nearer to home, engineers played an important role in
-                    stitching the east and west of Canada together in the late 1800s with the design and construction of
-                    the Canadian Pacific Railway (CPR).
-                </p>
+                    <p>
+                        This document is presented by two Canadian civil engineers; one in mid-career, and the other
+                        long-retired after more than 40 years practicing as a consulting engineer. Historically,
+                        engineers
+                        have a long history of planning, design, construction, and innovation on a wide variety of
+                        projects.
+                        Thousands of years ago in Egypt they built pyramids and invented new irrigation technology. In
+                        the
+                        Greco-Roman period of Mediterranean empires, they developed innovative infrastructure and built
+                        massive structures. Far to the east they constructed the Great Wall to defend China, as well as
+                        the
+                        Grand Canal to connect two major rivers. Nearer to home, engineers played an important role in
+                        stitching the east and west of Canada together in the late 1800s with the design and
+                        construction of
+                        the Canadian Pacific Railway (CPR).
+                    </p>
 
-                <p>
-                    The authors of this report have worked on a wide variety of development projects across Canada, and
-                    in over 40 other countries in the Americas, Europe, Asia and Africa. This experience has identified
-                    in Canada some serious problems with the political structure of this 150 year old nation, and has
-                    generated ideas that would improve Canada as it moves into its next 50 years. The major problem
-                    seems to be a fiefdom mentality hangover from North America’s colonial past. The authors have
-                    concentrated on currently available facts, and realize that some of their ideas may be controversial
-                    in many parts of the country.
-                </p>
+                    <p>
+                        The authors of this report have worked on a wide variety of development projects across Canada,
+                        and
+                        in over 40 other countries in the Americas, Europe, Asia and Africa. This experience has
+                        identified
+                        in Canada some serious problems with the political structure of this 150 year old nation, and
+                        has
+                        generated ideas that would improve Canada as it moves into its next 50 years. The major problem
+                        seems to be a fiefdom mentality hangover from North America’s colonial past. The authors have
+                        concentrated on currently available facts, and realize that some of their ideas may be
+                        controversial
+                        in many parts of the country.
+                    </p>
 
-                <div>
-                <p>
-                    This document follows the typical format of many engineering reports as outlined below:
-                </p>
+                    <div>
+                        <p>
+                            This document follows the typical format of many engineering reports as outlined below:
+                        </p>
 
-                <ul>
-                    <li>
-                        Introduction
-                    </li>
-                    Definition of the Problem
-                    <li>
-                        Historical Background
-                    </li>
-                    <li>
-                        Review of Similar Situations in Other Countries
-                    </li>
-                    <li>
-                        Existing Relevant Data.
-                    </li>
-                    <li>
-                        The Role of the Civil Engineer in Development.
-                    </li>
-                    <li>
-                        Extensive Natural Resources
-                    </li>
-                    <li>
-                        Possible Solutions to Problems.
-                    </li>
-                    <li>
+                        <ul>
+                            <li>
+                                Introduction
+                            </li>
+                            <li>
+                                Definition of the Problem
+                            </li>
+                            <li>
+                                Historical Background
+                            </li>
+                            <li>
+                                Review of Similar Situations in Other Countries
+                            </li>
+                            <li>
+                                Existing Relevant Data.
+                            </li>
+                            <li>
+                                The Role of the Civil Engineer in Development.
+                            </li>
+                            <li>
+                                Extensive Natural Resources
+                            </li>
+                            <li>
+                                Possible Solutions to Problems.
+                            </li>
+                            <li>
 
-                        Six Regions plus Canadian Capital Territory (CCT)
-                    </li>
-                    <li>
-                        Canadian Utility Corridor (CUC)
-                    </li>
-                    <li>
-                        Much Work – Big Future!
-                    </li>
-                    <li>
-                        Summary
-                    </li>
-                </ul>
-            </div>
+                                Six Regions plus Canadian Capital Territory (CCT)
+                            </li>
+                            <li>
+                                Canadian Utility Corridor (CUC)
+                            </li>
+                            <li>
+                                Much Work – Big Future!
+                            </li>
+                            <li>
+                                Summary
+                            </li>
+                        </ul>
+                    </div>
 
-                <p>
-                    Re-engineering Canada is not a project for older professionals sitting philosophically in
-                    comfortable think-tank offices. We believe everyone can contribute to our initiatives. It must be
-                    developed, and adopted so the benefits are available for children in the future when Canada
-                    celebrates its 200th birthday in 2067, and beyond. There are some signs that this change has already
-                    started with recent proposals to reduce inter-provincial trade and professional barriers. However,
-                    there is much more that needs to be done to change Canada into a dynamic united country with an
-                    expanding and vibrant economy. The provincial government in British Columbia raises alarm bells
-                    where that government wants to stop the construction of an oil pipeline plus the development of a
-                    hydroelectric project that will produce thousands of megawatts of “"green"” electric power. This
-                    type of politics demonstrates a lack of clear thinking, and little regard for the Canadian
-                    environment or economy.
-                </p>
+                    <p>
+                        Re-engineering Canada is not a project for older professionals sitting philosophically in
+                        comfortable think-tank offices. We believe everyone can contribute to our initiatives. It must
+                        be
+                        developed, and adopted so the benefits are available for children in the future when Canada
+                        celebrates its 200th birthday in 2067, and beyond. There are some signs that this change has
+                        already
+                        started with recent proposals to reduce inter-provincial trade and professional barriers.
+                        However,
+                        there is much more that needs to be done to change Canada into a dynamic united country with an
+                        expanding and vibrant economy. The provincial government in British Columbia raises alarm bells
+                        where that government wants to stop the construction of an oil pipeline plus the development of
+                        a
+                        hydroelectric project that will produce thousands of megawatts of “"green"” electric power. This
+                        type of politics demonstrates a lack of clear thinking, and little regard for the Canadian
+                        environment or economy.
+                    </p>
 
-                <p>
-                    This document proposes radical changes that could significantly improve the lives of Canada’s
-                    citizens. It would be the authors’ objectives that, as the country celebrates its 200th anniversary,
-                    the colonial fiefdom mentality would have been totally eliminated. A Canadian citizen’s first
-                    loyalty is to their country, and only then to the province.
-                </p>
+                    <p>
+                        This document proposes radical changes that could significantly improve the lives of Canada’s
+                        citizens. It would be the authors’ objectives that, as the country celebrates its 200th
+                        anniversary,
+                        the colonial fiefdom mentality would have been totally eliminated. A Canadian citizen’s first
+                        loyalty is to their country, and only then to the province.
+                    </p>
 
                 </div>
 
@@ -488,10 +504,9 @@
                 </div>
 
 
-
             </div>
 
-
+        </div>
 
     </main>
 
