--- a/P2/pages/struna.html
+++ b/P2/pages/struna.html
@@ -158,7 +158,7 @@
                             - Analytical models are repeatedly re-analyzed and modified/optimized from the project’s
                             start
                             to finish.
-                            <br>                            
+                            <br>
                             - Some of these models may be split between two engineers or transferred from one engineer
                             to
                             another within the same group.
@@ -231,7 +231,7 @@
 
 
             </div>
-
+        </div>
 
     </main>
 
